# flyLinuxServer

./: .gitignore  CMakeLists.txt  Makefile  ModemControl.c  ModemControl.h  README.md  copy_to_remote.sh  main.c  main.h  makefile  mavlink_handler.c  mavlink_handler.h  nRF24.c  nRF24.h  network.c  networkEnv.c  networkEnv.h  params.c  program_pack.c  run_nodejs.sh  si4463.c  si4463.h  spi.c  spi.h  tty.c
client/: clientTCP.c  makefile
node/: index.html  index.js
node/static/: client.js
src/: main.c  mavlink_handler.c  mavlink_handler.h  network.h  params.c  params.h  program_pack.c  program_pack.h  spi.c  spi.h  tty.c  tty.h
